<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/screens">
        <item
                android:id="@+id/main_fragment"
                android:title="@string/title_categories"/>
        <item
                android:id="@+id/new_fragment"
                android:title="@string/title_new_kuripugal"/>
        <item
                android:id="@+id/featured_fragment"
                android:title="@string/title_featured_kuripugal"/>
        <item
                android:id="@+id/favourite_fragment"
                android:title="@string/title_favourite_kuripugal"/>
    </group>

    <!--group android:id="@+id/actions">
        <item
                android:id="@+id/action_share"
                android:title="@string/action_share"/>
        <item
                android:id="@+id/action_feedback"
                android:title="@string/action_feedback"/>
        <item
                android:id="@+id/action_rateme"
                android:title="@string/action_rateme"/>
    </group-->

    <group android:id="@+id/privacy">
        <item
                android:id="@+id/privacy_fragment"
                android:title="@string/title_privacy"/>
    </group>
</menu>